Bug 1241408 - Update selection cache even if having read lock. r=masayuki